# masters-thesis

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-format.yml  pipeline.yml
data/: country_codes.py
data/mappings/: label_mappings.py
experiments/: clip.ipynb  clip_zero_shot.ipynb  deit.ipynb  experiments.ipynb  experiments_results.ipynb  few_shot_linear_probing_clip.ipynb  few_shot_linear_probing_deit.ipynb  few_shot_linear_probing_results.ipynb  few_shot_linear_probing_swin.ipynb  few_shot_linear_probing_vit.ipynb  fine_tuning_clip.ipynb  fine_tuning_data_aug.ipynb  fine_tuning_data_aug_swin.ipynb  fine_tuning_data_aug_vit.ipynb  fine_tuning_deit.ipynb  fine_tuning_results.ipynb  fine_tuning_swin.ipynb  fine_tuning_vit.ipynb  linear_probing_clip.ipynb  linear_probing_deit.ipynb  linear_probing_results.ipynb  linear_probing_swin.ipynb  linear_probing_vit.ipynb  prerequisites.ipynb  swin.ipynb  vit.ipynb  zero_shot_transfer.ipynb
experiments/configs/: data_augmentations.json  evaluation.json
experiments/few-shot-linear-probing/: few_shot_linear_probing_clip.ipynb  few_shot_linear_probing_deit.ipynb  few_shot_linear_probing_results.ipynb  few_shot_linear_probing_swin.ipynb  few_shot_linear_probing_vit.ipynb
experiments/fine-tuning-data-aug/: fine_tuning_data_aug_clip.ipynb  (+4 more)
src/: __init__.py  custom_dataset.py  dataset_builder.py  models.py  train.py
utils/: __init__.py  config.py  data_cleaning.py  data_handling.py  data_utils.py  models_utils.py  preprocessing.py  train_utils.py  visualization_utils.py
(+50 files in other folders)
