[tool.poetry]
name = "masters-thesis"
version = "1.0.0"
description = "Exploration and Comparison of Transformers for Image Classification."
authors = ["David Poslušný <david.poslusny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
